package NFMsg; 

//所有的网络逻辑事件枚举都在这里 
enum EGameEventCode
{
	EGEC_SUCCESS								= 0;        // 操作成功
	EGEC_UNKOWN_ERROR							= 1;		// 未知错误
	EGEC_ACCOUNT_EXIST							= 2;        // 注册时账号在数据库中已存在
	EGEC_ACCOUNTPWD_INVALID						= 3;        // 账号不存在或者密码错误
	EGEC_ACCOUNT_USING							= 4;        // 账号正在使用
	EGEC_ACCOUNT_LOCKED							= 5;        // 账号已封停
	EGEC_ACCOUNT_SUCCESS						= 6;        // 账号登录成功
	EGEC_VERIFY_KEY_SUCCESS						= 7;        // 账号KEY验证成功
	EGEC_VERIFY_KEY_FAIL						= 8;        // 账号KEY验证失败
	EGEC_SELECTSERVER_SUCCESS					= 9;        // 选择单服成功
	EGEC_SELECTSERVER_FAIL						= 10;       // 选择单服失败

	EGEC_CHARACTER_EXIST						= 110;       // 创建角色时角色名重复
	EGEC_SVRZONEID_INVALID						= 111;       // 创建角色时游戏区代码无效
	EGEC_CHARACTER_NUMOUT						= 112;       // 创建角色时角色个数超出设定值（一个账号最多建4个角色）
	EGEC_CHARACTER_INVALID						= 113;       // 角色名无效（非法角色名）
	EGEC_CHARACTER_NOTEXIST						= 114;       // 角色不存在
	EGEC_CHARACTER_USING						= 115;       // 角色已在游戏中
	EGEC_CHARACTER_LOCKED						= 116;       // 角色已封停
	EGEC_ZONE_OVERLOAD							= 117;       // 场景人数已满(领地XXX; 过于拥挤)
	EGEC_NOT_ONLINE								= 118;       // 玩家不在线
	EGEC_ALREAY_IN_TEAM							= 119;       // 玩家已经在队伍中了
	EGEC_INVALID_TEAM_INVITE					= 120;       // 无效的组队邀请
	EGEC_TEAM_FULL								= 121;       // 队伍人数已满
	EGEC_MAIL_UPDATE_ERROR						= 122;       // 更新邮件状态时出错
	EGEC_MAIL_TONAME_INVALID					= 123;       // 邮件时收件人不存在
	EGEC_MAIL_DELETE_ERROR						= 124;       // 删除邮件失败
	EGEC_MAIL_TOWNAME_EQUAL						= 125;       // 不能自己给自己发邮件
	EGEC_LACK_MONEY								= 126;       // 金钱不足
	EGEC_FULL_PACKAGE							= 127;       // 背包已满
	EGEC_INVALID_ITEM							= 128;       // 无效的道具
	EGEC_INVALID_CONSIGNMENT					= 129;       // 无效的寄售ID
	EGEC_NOT_ENOUGH_VIP							= 130;       // VIP点数不够
	EGEC_NEED_LEVEL								= 131;       // 等级不够
	EGEC_MAX_FRIEND_LIST						= 132;       // 好友列表已满
	EGEC_MAX_ENEMY_LIST							= 133;       // 恶人列表已满
	EGEC_MAX_GANGS_LSIT							= 134;       // 帮会人数达上限
	EGEC_LIMITS_TO_RIGHTS						= 135;       // 需要权限
	EGEC_INVALID_GANGS_NAME						= 136;       // 无效的帮会名称
	EGEC_REPEAT_ENTER_GANGS						= 137;       // 角色已经是帮会成员了;不能再加入帮会了
	EGEC_INVALID_GANGSMEMBER					= 138;       // 角色不是指定帮会成员
	EGEC_MASTER_LEAVE_GANGS						= 139;       // 会长不能离开帮会
	EGEC_GANGS_TITLE_OUTOF						= 140;       // 指定帮会职务的人类超过该职务的最大数量
	EGEC_ENTER_GATEWAY_FAILD					= 141;       // 无效的传送请求(传送门实际不存在;没有到达触发传送的条件等)
	EGEC_NO_SERVER4ZONE							= 142;       // 还没有指派服务器管理该场景; 请稍等(游戏世界还处于混沌中...)
	EGEC_INVALID_SKILL							= 143;       // 无效的技能
	EGEC_ENTER_GAME_SUCCESS						= 144;		 // 进入游戏成功
	
	EGEC_CREATE_GUILD_SUCCESS					= 200;		 // 创建公会成功
	EGEC_JOIN_GUILD_SUCCESS						= 201;		 // 加入公会成功
	EGEC_LEAVE_GUILD_SUCCESS					= 202;		 // 离开公会成功
	

}

enum EGameMsgID
{
	EGMI_UNKNOW						= 0;         // 位知
	EGMI_EVENT_RESULT				= 1;         // 事件结果
	EGMI_EVENT_TRANSPOND			= 2;         // 网关转发
	EGMI_CLOSE_SOCKET				= 3;         // 想要关闭某个网络对象

	EGMI_MTL_WORLD_REGISTERED		= 10;
	EGMI_MTL_WORLD_UNREGISTERED		= 11;
	EGMI_MTL_WORLD_REFRESH			= 12;

	EGMI_LTM_LOGIN_REGISTERED		= 20;
	EGMI_LTM_LOGIN_UNREGISTERED		= 21;
	EGMI_LTM_LOGIN_REFRESH			= 22;

	EGMI_PTWG_PROXY_REGISTERED		= 30;
	EGMI_PTWG_PROXY_UNREGISTERED	= 31;
	EGMI_PTWG_PROXY_REFRESH			= 32;

	EGMI_GTW_GAME_REGISTERED		= 40;
	EGMI_GTW_GAME_UNREGISTERED		= 41;
	EGMI_GTW_GAME_REFRESH			= 42;

	EGMI_STS_NET_INFO				= 50;
	EGMI_STS_HEART_BEAT				= 100;
	//////////////////////////////////////////////////////////////////////////////////////
	EGMI_REQ_LOGIN									= 101;     // 登陆帐号
	EGMI_ACK_LOGIN									= 102;     // 登陆帐号
	EGMI_REQ_LOGOUT									= 103;		// 登出帐号

	EGMI_REQ_WORLD_LIST							= 110;			// 申请世界列表
	EGMI_ACK_WORLD_LIST							= 111;			//
	EGMI_REQ_CONNECT_WORLD						= 112;			// 申请连接到世界
	EGMI_ACK_CONNECT_WORLD						= 113;
	EGMI_REQ_KICK_CLIENT_INWORLD				= 114;			//要求在此世界T人
	
	EGMI_REQ_CONNECT_KEY						= 120;         // 用KEY连接世界的网关
	EGMI_ACK_CONNECT_KEY						= 122;         // 


	EGMI_REQ_SELECT_SERVER						= 130;			// 选择一个单服
	EGMI_ACK_SELECT_SERVER						= 131;			// 选择一个单服
	EGMI_REQ_ROLE_LIST							= 132;			// 申请角色列表
	EGMI_ACK_ROLE_LIST							= 133;			// 
	EGMI_REQ_CREATE_ROLE						= 134;			// 申请创建一个角色
	EGMI_REQ_DELETE_ROLE						= 135;			// 申请删除一个角色
	EGMI_REQ_RECOVER_ROLE						= 136;			// 申请恢复一个角色

	EGMI_REQ_ENTER_GAME							= 150;			// 申请进入游戏世界
	EGMI_ACK_ENTER_GAME							= 151;			// 回复进入了游戏世界成功
	EGMI_REQ_LEAVE_GAME							= 152;			// 申请离开游戏世界, 回到选人
	EGMI_ACK_LEAVE_GAME							= 153;			// 回复,申请离开游戏世界
	EGMI_REQ_SWAP_GAME							= 154;			//
	EGMI_REQ_SWAP_SCENE							= 155;			// 申请切换场景
	EGMI_ACK_SWAP_SCENE							= 156;			// 回复切换场景结果
	EGMI_REQ_END_BATTLE							= 157;			// 申请副本结算
	EGMI_ACK_END_BATTLE							= 158;			// 回复副本结算

	EGMI_ACK_OBJECT_ENTRY						= 200;			// 有对象进入
	EGMI_ACK_OBJECT_LEAVE						= 201;			// 有对象出去
	
	EGMI_ACK_OBJECT_PROPERTY_ENTRY				= 202;			// 有对象属性进入
	EGMI_ACK_OBJECT_RECORD_ENTRY				= 203;			// 有对象表进入
	
	EGMI_ACK_PROPERTY_INT						= 210;			// 属性变更
	EGMI_ACK_PROPERTY_FLOAT						= 211;			// 属性变更
	EGMI_ACK_PROPERTY_STRING					= 212;			// 属性变更
	EGMI_ACK_PROPERTY_DOUBLE					= 213;			// 属性变更
	EGMI_ACK_PROPERTY_OBJECT					= 214;			// 属性变更

	EGMI_ACK_ADD_ROW							= 220;
	EGMI_ACK_REMOVE_ROW							= 221;
	EGMI_ACK_SWAP_ROW							= 222;
	EGMI_ACK_RECORD_INT							= 223;
	EGMI_ACK_RECORD_FLOAT						= 224;
	EGMI_ACK_RECORD_DOUBLE						= 225;
	EGMI_ACK_RECORD_STRING						= 226;
	EGMI_ACK_RECORD_OBJECT						= 227;
	EGMI_ACK_RECORD_CLEAR						= 228;
	EGMI_ACK_RECORD_SORT						= 229;

	EGMI_REQ_MOVE								= 230;
	EGMI_ACK_MOVE								= 231;
	EGMI_REQ_MOVE_IMMUNE						= 232;
	EGMI_ACK_MOVE_IMMUNE						= 233;

	EGMI_REQ_SKILL_OBJECTX						= 240;
	EGMI_ACK_SKILL_OBJECTX						= 241;
	EGMI_REQ_SKILL_POS							= 242;
	EGMI_ACK_SKILL_POS							= 243;
	EGMI_REQ_ITEM_OBJECT						= 244;
	EGMI_ACK_ITEM_OBJECT						= 245;
	EGMI_REQ_ITEM_POS							= 246;
	EGMI_ACK_ITEM_POS							= 247;


	EGMI_REQ_CHAT								= 250;
	EGMI_ACK_CHAT								= 251;
	EGMI_REQ_SALE_ITEM							= 252;
	EGMI_REQ_SPLIT_ITEM							= 253;
	EGMI_REQ_PRODUCE_ITEM						= 254;
	EGMI_REQ_PICK_ITEM							= 255;
	EGMI_REQ_ACCEPT_TASK						= 256;
	EGMI_REQ_COMPELETE_TASK						= 257;
	
	EGMI_REQ_JOIN_PVP                           = 260; // 申请加入PVP
	EGMI_REQ_EXIT_PVP                           = 261; // 申请离开PVP
	EGMT_ACK_START_PVP                          = 262; // 通知开始PVP
	
	EGMI_REQ_SEARCH_OPPNENT                     = 280; // 查找对手(EBattleType)
	EGMI_ACK_SEARCH_OPPNENT                     = 281; // 返回查找对手的信息(EBattleType)
	EGMT_REQ_START_OPPNENT                      = 282; // 开始战斗(EBattleType)
	EGMT_ACK_START_OPPNENT                      = 283; // 开始战斗(EBattleType)
	
	
	EGMI_ACK_ONLINE_NOTIFY						= 290; // 玩家上线通知
	EGMI_ACK_OFFLINE_NOTIFY						= 291; // 玩家下线通知
	
	EGMI_REQ_CREATE_GUILD                       = 300; // 申请创建公会
	EGMI_ACK_CREATE_GUILD						= 301; // 创建公会结果
	EGMI_REQ_JOIN_GUILD                         = 302; // 申请加入公会
	EGMI_ACK_JOIN_GUILD							= 303; // 加入公会结果
	EGMI_REQ_LEAVE_GUILD                        = 304; // 申请离开公会
	EGMI_ACK_LEAVE_GUILD						= 305; // 离开公会结果 
	EGMI_REQ_OPR_GUILD                        	= 306; // 申请成员操作 
	EGMI_ACK_OPR_GUILD                        	= 307; // 成员操作结果
	EGMI_REQ_SEARCH_GUILD                       = 308; // 申请搜索公会
	EGMI_ACK_SEARCH_GUILD                       = 309; // 返回搜索公会	
	
	EGMI_REQ_OPR_GUILDINFO						= 310; // 申请公会操作 
	EGMI_ACK_OPR_GUILDINFO						= 311; // 公会操作结果
	
	EGMI_REQ_GUILDECTYPEINFO					= 312; // 申请公会副本
	EGMI_ACK_GUILDECTYPEINFO					= 313; // 工会副本的信息
	
	EGMI_SET_GUILDECTYPEINFO					= 314; // 设置工会副本的信息
	
	EGMI_ReqEnterGuildEctype					= 315; // 
	
	EGEC_REQ_CREATE_CHATGROUP					= 400;		 // 创建聊天ReqAckCreateChatGroup
	EGEC_ACK_CREATE_CHATGROUP					= 401;		 // 创建聊天ReqAckCreateChatGroup
	EGEC_REQ_JOIN_CHATGROUP						= 402;		 // 加入聊天ReqAckjoinChatGroup
	EGEC_ACK_JOIN_CHATGROUP						= 403;		 // 加入聊天ReqAckjoinChatGroup
	EGEC_REQ_LEAVE_CHATGROUP					= 404;		 // 离开聊天ReqAckQuitChatGroup
	EGEC_ACK_LEAVE_CHATGROUP					= 405;		 // 离开聊天ReqAckQuitChatGroup
	EGEC_REQ_SUBSCRIPTION_CHATGROUP				= 406;		 // 订阅聊天室ReqSubscriptionChatGroup
	EGEC_REQ_CANCELSUBSCRIPTION_CHATGROUP		= 407;		 // 取消订阅聊天室ReqSubscriptionChatGroup
	EGEC_REQ_INVITE_CHATGROUP					= 408;		 // 邀请进入聊天室
	EGEC_ACK_INVITE_CHATGROUP					= 409;		 // 邀请进入聊天室
	EGEC_REQ_KICK_CHATGROUP						= 410;		 // 踢出聊天室
	EGEC_ACK_KICK_CHATGROUP						= 411;		 // 踢出聊天室
	
	EGEC_REQ_CHATGROUP_TO_TEAM					= 450;		 // 聊天室快速组队
	EGEC_ACK_CHATGROUP_TO_TEAM					= 451;		 // 聊天室快速组队	
	
	EGEC_REQ_INTENSIFYLEVEL_TO_EQUIP			= 500;		 // 装备强化
	EGEC_ACK_INTENSIFYLEVEL_TO_EQUIP			= 501;		 // 装备强化
	
	EGEC_REQ_HOLE_TO_EQUIP						= 502;		 // 装备打洞
	EGEC_ACK_HOLE_TO_EQUIP						= 503;		 // 装备打洞
	
	EGEC_REQ_INLAYSTONE_TO_EQUIP				= 504;		 // 装备镶嵌
	EGEC_ACK_INLAYSTONE_TO_EQUIP				= 505;		 // 装备镶嵌
	
	EGEC_REQ_ELEMENTLEVEL_TO_EQUIP				= 506;		 // 装备附魔
	EGEC_ACK_ELEMENTLEVEL_TO_EQUIP				= 507;		 // 装备附魔

	EGEC_REQ_SET_FIGHT_HERO						= 508;		 // 战斗武将
	
	EGEC_WEAR_EQUIP								= 509;		 // 装备创戴
	EGEC_TAKEOFF_EQUIP							= 510;		 // 装备卸载

	EGEC_REQ_MINING_TITLE						= 600;		 // 申请挖次矿（地块）
	
    EGEC_REQ_SEND_MAIL                          = 700; // 发送邮件
    EGEC_REQ_DRAW_MAIL                          = 701; // 领取邮件中的奖励(包含道具或者钻石等非道具的东西)
    EGEC_REQ_DELETE_MAIL                        = 702; // 删除邮件
	
	//对象clone
	EGMI_ACK_CLONE_OBJECT_ENTRY						= 800;			// 有对象进入
	EGMI_ACK_CLONE_OBJECT_LEAVE						= 801;			// 有对象出去
	        
	EGMI_ACK_CLONE_OBJECT_PROPERTY_ENTRY			= 802;			// 有对象属性进入
	EGMI_ACK_CLONE_OBJECT_RECORD_ENTRY				= 803;			// 有对象表进入
	       
	EGMI_ACK_CLONE_PROPERTY_INT						= 810;			// 属性变更
	EGMI_ACK_CLONE_PROPERTY_FLOAT					= 811;			// 属性变更
	EGMI_ACK_CLONE_PROPERTY_STRING					= 812;			// 属性变更
	EGMI_ACK_CLONE_PROPERTY_DOUBLE					= 813;			// 属性变更
	EGMI_ACK_CLONE_PROPERTY_OBJECT					= 814;			// 属性变更
            
	EGMI_ACK_CLONE_ADD_ROW							= 820;
	EGMI_ACK_CLONE_REMOVE_ROW						= 821;
	EGMI_ACK_CLONE_SWAP_ROW							= 822;
	EGMI_ACK_CLONE_RECORD_INT						= 823;
	EGMI_ACK_CLONE_RECORD_FLOAT						= 824;
	EGMI_ACK_CLONE_RECORD_DOUBLE					= 825;
	EGMI_ACK_CLONE_RECORD_STRING					= 826;
	EGMI_ACK_CLONE_RECORD_OBJECT					= 827;
	EGMI_ACK_CLONE_RECORD_CLEAR						= 828;
	EGMI_ACK_CLONE_RECORD_SORT						= 829;
	
	EGMI_REQSWICHSERVER								= 840;	// 申请转服
	EGMI_ACKSWICHSERVER								= 841;	// 申请转服
	
	EGMI_REQ_CREATE_TEAM                       		= 860; 	// 申请创建队伍
	EGMI_ACK_CREATE_TEAM							= 861; 	// 创建队伍结果
	EGMI_REQ_JOIN_TEAM                         		= 862; 	// 申请加入队伍
	EGMI_ACK_JOIN_TEAM								= 863; 	// 加入队伍结果
	EGMI_REQ_LEAVE_TEAM                        		= 864; 	// 申请离开队伍
	EGMI_ACK_LEAVE_TEAM								= 865; 	// 离开队伍结果 
	EGMI_REQ_INVITE_TEAM							= 866; 	// 邀请加入队伍
	EGMI_REQ_OPRMEMBER_TEAM							= 867; 	// 操作成员
	EGMI_ACK_OPRMEMBER_TEAM							= 868; 	// 操作成员 
	
	EGMI_REQ_TEAM_ENTER_ECTYPE						= 869; 	// 组队进副本 
	EGMI_ACK_TEAM_ENTER_ECTYPE						= 870; 	// 组队进副本
	
	
	/////////////////////MapModule/////////////////////////////////////
	EGMI_REQ_MAP_GRID_INFO							= 900; 	// 申请查看地图格子信息
	EGMI_ACK_MAP_GRID_INFO							= 901; 	// 返回查看格子地图	
	EGMI_REQ_BIG_MAP_INFO							= 902; 	// 申请大地图信息
	EGMI_ACK_BIG_MAP_INFO							= 903; 	// 返回大地图
	
	EGMI_REQ_HOLD_MAP_GRID						= 910; 	// 申请入驻
	EGMI_ACK_HOLD_MAP_GRID						= 911; 	// 返回入驻结果
	EGMI_REQ_LEAVE_MSG_MAP_GRID					= 912; 	// 申请留言
	EGMI_ACK_LEAVE_MSG_MAP_GRID					= 913; 	// 返回留言结果
	EGMI_REQ_GET_MAP_GRID_AWARD					= 914; 	// 申请领取地图奖励
	EGMI_ACK_GET_MAP_GRID_AWARD					= 915; 	// 返回领取地图奖励
	
	EGMI_REQ_MAP_GRID_HUNTING					= 916; 	// 申请地图狩猎
	EGMI_ACK_MAP_GRID_HUNTING					= 917; 	// 返回结果
	EGMI_REQ_MAP_GRID_KING_WAR					= 918; 	// 申请地图争霸
	EGMI_ACK_MAP_GRID_KING_WAR					= 919; 	// 返回结果
    
	/////////////////////GM MSG/////////////////////////////////////订阅
	EGMI_REQ_CMD_PROPERTY_INT					= 1000;			// GM命令修改整形
	EGMI_REQ_CMD_PROPERTY_STR					= 1001;			// GM命令修改修改字符串
	EGMI_REQ_CMD_PROPERTY_OBJECT				= 1002;			// GM命令
	EGMI_REQ_CMD_PROPERTY_FLOAT					= 1003;			// GM命令
	EGMI_REQ_CMD_RECORD_INT						= 1004;			// GM命令修改表整形
	EGMI_REQ_CMD_RECORD_STR						= 1005;			// GM命令修改修改表字符串
	EGMI_REQ_CMD_RECORD_OBJECT					= 1006;			// GM命令修改
	EGMI_REQ_CMD_RECORD_FLOAT					= 1007;			// GM命令修改
	EGMI_REQ_CMD_NORMAL							= 1008;			// 其他GM修改
	/////////////////////Base SLG MSG/////////////////////////////////////
	EGMI_REQ_BUY_FORM_SHOP						= 10000;//申请从商店种植建筑
	EGMI_ACK_BUY_FORM_SHOP						= 10001;//返回商店种植建筑结果
	EGMI_REQ_MOVE_BUILD_OBJECT					= 10002;//申请移动建筑
	EGMI_ACK_MOVE_BUILD_OBJECT					= 10003;//返回移动建筑结果
	
	EGMI_REQ_UP_BUILD_LVL						= 10101;//申请建筑升级
	EGMI_REQ_CREATE_ITEM						= 10102;//申请造兵&药水&等
	EGMI_REQ_BUILD_OPERATE						= 10103;//申请建筑操作
}

/////////////////////////道具系统相关//////////////////////////////////////////////////////////////////////////
enum EItemType
{
    EIT_EQUIP   			= 0; // 装备
	EIT_GEM   				= 1; // 宝石
	EIT_ITEM   				= 2; // 消耗品
	EIT_CARD   				= 3; // 卡牌
	EIT_TOKEN	   			= 4; // 令牌
}

//装备子类型(归属类型)
enum EGameEquipSubType
{
	EQUIPTYPE_WEAPON            = 0;    // 武器
	EQUIPTYPE_HELMET            = 1;    // 头盔
	EQUIPTYPE_ARMOR             = 2;    // 胸甲
	EQUIPTYPE_WRIST             = 3;    // 护腕	
	EQUIPTYPE_PANT              = 4;    // 裤子	
	EQUIPTYPE_BOOT              = 5;   	// 靴子
};

//宝石子类型	
enum EGameGemSubType
{
	EGGSTYPE_GEM_ATK           	= 0;    // 攻击宝石
	EGGSTYPE_GEM_DEF           	= 1;    // 防御宝石
	
	EGGSTYPE_GEM_FIRE			= 3;    // 火宝石
	EGGSTYPE_GEM_LIGHT			= 4;    // 雷宝石
	EGGSTYPE_GEM_WIND           = 5;    // 风宝石
	EGGSTYPE_GEM_ICE          	= 6;    // 冰冻宝石
	EGGSTYPE_GEM_POISON         = 7;    // 毒宝石	
	
};


enum EGameItemSubType
{
	EGIT_ITEM_WATER				= 0; 	// 圣水
	EGIT_ITEM_DIAMOND			= 1;	// 钻石 
	EGIT_ITEM_CURRENCY			= 2; 	// 金币
	EGIT_ITEM_EXP				= 3; 	// EXP
	EGIT_ITEM_HP				= 4;	// 生命药水
	EGIT_ITEM_MP				= 5;	// 魔法药水
	EGIT_ITEM_SP				= 6;	// 体力药水
};

enum EGameCardSubType
{
	EGCST_STRENGTH 				= 1;//力量	
	EGCST_AGILITY				= 2;//敏捷
	EGCST_INTELLIGENCE			= 3;//智力
};

enum EGameTokenSubType
{
	EGTST_TOKEN_REBORN					= 0; 	// 重生道具(消耗此物品时得到某种待遇)
	EGTST_TOKEN_POSITION				= 1;	// 移动位置(传送到新手村)(消耗此物品时得到某种待遇)
	EGTST_TOKEN_BOUNTY   				= 2; 	// 赏金令
	EGTST_TOKEN_ACTIVITY				= 3;	// 活动令牌
};


//道具时间类型
enum EGameItemExpiredType
{
    EGIET_NONE = 0;               	// 永不过期类型
    EGIET_USE_TIMES = 1;            // 使用次数, 变形魔杖,变0道具要消失(普通物品数量)
    EGIET_REAL_TIME = 2;            // 真实的时间流逝(秒),适合时装,礼包,饰品(写死1天1周)
    EGIET_END_INDEX = 3;
};

////////////掉落状态/////////////////////////////////////////////////////////////////////////////////////

enum EDrawDropItemState
{
    E_DRAW_STATE_NONE   = 0; // 初始状态
    E_DRAW_STATE_GAIN   = 1; // 可获得
    E_DRAW_STATE_RECV   = 2; // 已领取
};
///////////////////////////////////////////////////////////////////////////////////////////////////
// 公会成员权限
enum EGuildPowerType
{
    GUILD_POWER_TYPE_NORMAL   			= 0; // 普通成员
	GUILD_POWER_TYPE_VICE_PRESIDENT		= 1; // 副会长
	GUILD_POWER_TYPE_PRESIDENT			= 2; // 会长
	// TODO
}

// 任务状态
enum ETaskState
{
    TASK_IN_PROCESS             = 0; // 任务进行中
    TASK_DONE                   = 1; // 任务完成
    TASK_DRAW_AWARD             = 2; // 领取过任务奖励了
    TASK_FINISH                 = 3; // 任务结束
}

// 任务类型
enum ETaskType
{
    TASK_LEVEL_UPDATE_SOME_LEVEL        = 0; // 主角升级到某个等级
    TASK_PASS_ECTYPE                    = 1; // 通过某个副本
    TASK_PASS_ECTYPE_COUNT              = 2; // 通过任意副本多少次
    TASK_PASS_SOME_TYPE_ECTYPE_COUNT    = 3; // 通过某类副本多少次
    TASK_UPDATE_SKILL_COUNT             = 4; // 升级技能多少次
    TASK_CONSUME_MONEY                  = 5; // 消费多少金币
    TASK_CONSUME_DIAMOND                = 6; // 消费多少钻石
    TASK_ARENA_COUNT                    = 7; // 参加竞技场多少次
    TASK_KILL_MONSTER_COUNT             = 8; // 累计杀怪多少只
    TASK_KILL_SOME_MONSTER_COUNT        = 9; // 杀死某个特定怪度多少只
    // TODO
}

// 战斗类型
enum EBattleType
{
	BATTLE_SINGLE        = 0; // 主角单人打副本
	BATTLE_PVE_TEAM      = 1; // 多人打副本
}

enum EShopType
{
	EST_BUILDING 	= 1;//建筑	
	EST_GOLD		= 2;//金币
	EST_DIAMOND		= 3;//钻石
	EST_SP			= 4;//体力
	EST_EQUIP		= 5;//装备
	EST_GEM			= 6;//宝石
	EST_Hero		= 7;//HeroCard
	EST_Other		= 8;//杂货店
}


///////////////排行榜相关////////////////////////////////////////////////////////////////////////////////////

enum ERankType
{
	ERT_PLAYER_LEVEL 			= 1;
	ERT_FIGHT_VALUE				= 2;
	ERT_PLAYER_MONEY			= 3;
	ERT_GUILD_LEVEL				= 4;
	ERT_GUILD_KINGSOURCE		= 5;
}

///////////////////////////////////////////////////////////////////////////////////////////////////

//NCPTypenpc的类型
enum ENPCType
{
    ENPCTYPE_NORMAL	= 0;			  // 普通怪
    ENPCTYPE_HERO 	= 1;              // 英雄
    ENPCTYPE_TURRET = 2;              // 炮塔
    
};

//PropertyType 属性的类型
enum EPropertyType
{
	EPT_STRENGTH 			= 1;//力量	
	EPT_AGILITY				= 2;//敏捷
	EPT_INTELLIGENCE		= 3;//智力
};

//元素类型
enum EGameElementType
{	
	EELEMENTTYPE_FIRE				= 0;    // 火
	EELEMENTTYPE_LIGHT				= 1;    // 雷电
	EELEMENTTYPE_WIND              	= 2;    // 风
	EELEMENTTYPE_ICE          		= 3;    // 冰冻
	EELEMENTTYPE_POISON          	= 4;    // 毒	
};


